--- a/TaskManager/Pages/Projects.razor
+++ b/TaskManager/Pages/Projects.razor
@@ -41,6 +41,11 @@
             projects.Remove(project);
         }
     }
+
+    private void GoToSections(int projectId)
+    {
+        Navigation.NavigateTo($"/sections/{projectId}");
+    }
 }
 
 <h3>Proyectos en Carpeta: @folder?.Name</h3>
@@ -64,7 +69,7 @@ else
         @foreach (var project in projects)
         {
             <li class="list-group-item d-flex justify-content-between align-items-center">
-                @project.Name
+                <span @onclick="() => GoToSections(project.Id)" style="cursor:pointer;">@project.Name</span>
                 <button class="btn btn-danger btn-sm" @onclick="() => DeleteProject(project.Id)">Eliminar</button>
             </li>
         }
