--- a/TaskManager/Pages/Index.razor
+++ b/TaskManager/Pages/Index.razor
@@ -12,6 +12,6 @@ Welcome to your new app.
 @code {
     protected override void OnInitialized()
     {
-        Navigation.NavigateTo("/workspaces", true);
+        //Navigation.NavigateTo("/workspaces", true);
     }
 }
