--- a/TaskManager/Pages/ProjectTasks.razor
+++ b/TaskManager/Pages/ProjectTasks.razor
@@ -5,6 +5,7 @@
 
 @if (_selectedProject != null)
 {
+    <ProjectAddTask />
     <div class="container mt-3">
         @foreach (var sec in Db.Sections.Where(s => s.ProjectId == _selectedProject.Id))
         {
